# M5-DoorSensor

./: .gitignore  MQTT_SETUP_GUIDE.md  README.md
.github/workflows/: build_firmware.yml
docs/: M5StickC_Plus2_Specifications.md  android-app-selection.md  test-validation-checklist.md
firmware/: CMakeLists.txt  alert_listener.py  door_sensor.ino  idf_component.yml  sdkconfig  sdkconfig.old  secrets.example.h  secrets.h.ci
firmware/.cache/clangd/index/: door_sensor.cpp.52AD4EF2BCCA3A05.idx
firmware/main/: CMakeLists.txt  Kconfig.projbuild  door_sensor.cpp  idf_component.yml
nodered/: door_sensor_flow.json
